--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:onClick="onDigit"
-            android:text="7"/>
+            android:text="@string/_7"/>
 
         <Button
             android:id="@+id/btnEight"
@@ -37,7 +37,7 @@
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:onClick="onDigit"
-            android:text="8"/>
+            android:text="@string/_8"/>
 
         <Button
             android:id="@+id/btnNine"
@@ -45,7 +45,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:text="9"/>
+            android:text="@string/_9"/>
 
         <Button
             android:id="@+id/btnDivide"
@@ -54,7 +54,7 @@
             android:layout_weight="1"
             android:layout_margin="2dp"
             android:onClick="onDigit"
-            android:text="/"/>
+            android:text="@string/divide"/>
 
     </LinearLayout>
 
