[Kotlin Develop Class][Calculate App] Adding the OnOperator Functionality using Contains and StartsWith on Strings (Reviewed by Papon S.)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:text="@string/divide"
             tools:ignore="UsingOnClickInXML"/>
 
@@ -107,7 +107,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:text="@string/multiple"
             tools:ignore="UsingOnClickInXML"/>
 
@@ -155,7 +155,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:text="@string/minus"
             tools:ignore="UsingOnClickInXML"/>
 
@@ -173,7 +173,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:onClick="onDecimalPoint"
+            android:onClick="onOperator"
             android:text="@string/dot"
             tools:ignore="UsingOnClickInXML"/>
 
@@ -203,7 +203,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_margin="2dp"
-            android:onClick="onDigit"
+            android:onClick="onOperator"
             android:text="@string/plus"
             tools:ignore="UsingOnClickInXML"/>
 
